chore: edit Program.cs

--- a/IdentityService.WebAPI/appsettings.json
+++ b/IdentityService.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultDB":{
+    "ConnStr": "server=127.0.0.1;port=3306;user=root;password=123456;database=IdentityService;"
+  }
 }
