--- a/IdentityService.WebAPI/IdentityService.WebAPI.csproj
+++ b/IdentityService.WebAPI/IdentityService.WebAPI.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\CommonInitializer\CommonInitializer.csproj" />
       <ProjectReference Include="..\IdentityService.Domain\IdentityService.Domain.csproj" />
       <ProjectReference Include="..\IdentityService.Infrastructure\IdentityService.Infrastructure.csproj" />
     </ItemGroup>
