feat:认证服务第一次跑通

--- a/Commons/VNext.JWT/VNext.JWT.csproj
+++ b/Commons/VNext.JWT/VNext.JWT.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\VNext.Commons\VNext.Commons.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
+    </ItemGroup>
+
 </Project>
