--- a/IdentityService.Infrastructure/IdentityService.Infrastructure.csproj
+++ b/IdentityService.Infrastructure/IdentityService.Infrastructure.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\IdentityService.Domain\IdentityService.Domain.csproj" />
+      <ProjectReference Include="..\VNext.Commons\VNext.Commons.csproj" />
       <ProjectReference Include="..\VNext.Infrastructure\VNext.Infrastructure.csproj" />
     </ItemGroup>
 
