--- a/Commons/VNext.JWT/VNext.JWT.csproj
+++ b/Commons/VNext.JWT/VNext.JWT.csproj
@@ -11,7 +11,15 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Authentication">
+        <HintPath>..\..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\7.0.9\Microsoft.AspNetCore.Authentication.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
