--- a/VNext.ASPNETCore/VNext.ASPNETCore.csproj
+++ b/VNext.ASPNETCore/VNext.ASPNETCore.csproj
@@ -10,4 +10,15 @@
       <ProjectReference Include="..\VNext.Commons\VNext.Commons.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Mvc.Abstractions">
+        <HintPath>..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\7.0.9\Microsoft.AspNetCore.Mvc.Abstractions.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
+    </ItemGroup>
+
 </Project>
