--- a/VNext.Infrastructure/VNext.Infrastructure.csproj
+++ b/VNext.Infrastructure/VNext.Infrastructure.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
     </ItemGroup>
 
